# embarcatech-final-project

./: CMakeLists.txt
inc/: bitmap.h
src/: CMakeLists.txt  main.c
